<resources>
    <string name="app_name">CyberGuard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- strings i added -->
    <string name="username">Username</string>
    <string name="user_photo_desc">User photo</string>
    <string name="email">exmaple@gmail.com</string>
    <string name="menu_home">CyberGuard</string>
    <string name="menu_awareness">Awareness</string>
    <string name="menu_history">History</string>
    <string name="menu_ai">CyberGuard Assistant</string>
    <string name="menu_settings">Settings</string>"
    <string name="menu_logout">Log Out</string>
    <string name="menu_about">About</string>

    <string name="tool1">APK Scan</string>
    <string name="tool2">Text Scan</string>
    <string name="tool3">URL Scan</string>
    <string name="tool4">QR Scan</string>

    <string name="appearance">Appearance</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="system_default">System Default</string>

    <string name="account">Account</string>
    <string name="device">Device Info</string>

</resources>